Word wrap semi-fixed, it's working but long words run over table cells

--- a/stylesheets/RESTular.css
+++ b/stylesheets/RESTular.css
@@ -11,7 +11,7 @@ header {
 	text-shadow: 0 0 1px rgba(0,0,0,0.3);
 	text-align: left;
 	padding-left: 12%;
-	height: 119px;
+	height: 8em;
 	width: 100%;
 	background: #c52f24;
 	padding-top: 5px;
@@ -79,6 +79,7 @@ header p {
 
 .route td {
 	min-width: 150px;
+	max-width: 300px;
 	text-align: left;
 }
 
@@ -90,7 +91,7 @@ header p {
 	height: 100px;
 }
 
-.route-info pre{
+.route-info pre {
   background-color: #f7f7f7;
   font-family: monospace;
   white-space: pre;
